# adventofcode-2022

./: .gitignore  CMakeLists.txt  build_all.sh  run.sh
Day-1/: day1.py
Day-1/python/: day1-part1.py  day1-part2.py
day-5/python/: day5-part2.py
day-6/python/: day6-part2.py
day-7/python/: day7-part1.py  day7-part2.py
day1/c++/src/: part1.cpp  part2.cpp
day1/python/: day1-part1-o1.py  day1-part2-o1.py  day1-part2.py
day2/c++/src/: part1.cpp  part2.cpp
day2/python/: day2-part1.py  day2-part2.py
day3/c++/src/: part1-o1.cpp  part1.cpp  part2.cpp
day3/chatGPT-python/: day3-part1.py
day3/python/: day3-part1.py  day3-part2.py
day4/python/: day4-part1.py  day4-part2.py
day5/python/: day5-part1.py
day6/python/: day6-part1.py
day8/python/: day8-part1.py  day8-part2.py
day9/python/: day9-part1.py  day9-part2.py
